fix switch btn on mobile

--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -29,6 +29,6 @@
 
 @media screen and (max-width: $mobile) {
   .switch_account_button {
-    display: flex;
+    display: flex !important;
   }
 }
